feat: Add recipe image

--- a/HTML/recipe_image.html
+++ b/HTML/recipe_image.html
@@ -2,9 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Recipe</title>
+    <title>Easy butter chicken</title>
   </head>
   <body>
+    <h1>Easy butter chicken</h1>
+    <p>
+        Fancy a healthy version of your favourite Friday night chicken curry? The
+        chicken can be marinaded the day before so you can get ahead on your prep
+      </p>    
+    <img
+      src="https://images.pexels.com/photos/2338407/pexels-photo-2338407.jpeg?cs=srgb&dl=pexels-harry-dona-2338407.jpg&fm=jpg"
+      width="640"
+      height="426"
+      alt="Chicken"
+    />
+
     <h1>Ingredients</h1>
     <!--Unordered list-->
     <ul>
@@ -40,7 +52,7 @@
 
     <!--Ordered List-->
     <ol>
-      <li>STEP 1</li>
+      <li>STEP 1 &#x1F958</li>
       <ul>
         <li>
           In a medium bowl, mix all the marinade ingredients with some
@@ -48,7 +60,7 @@
           marinade. Cover and chill in the fridge for 1 hr or overnight.
         </li>
       </ul>
-      <li>STEP 2</li>
+      <li>STEP 2 &#x1F963</li>
       <ul>
         <li>
           In a large, heavy saucepan, heat the oil. Add the onion, garlic, green
@@ -56,7 +68,7 @@
           until soft.
         </li>
       </ul>
-      <li>STEP 3</li>
+      <li>STEP 3 &#x1F957</li>
       <ul>
         <li>
           Add the spices with the tomato purée, cook for a further 2 mins until
@@ -67,5 +79,13 @@
         </li>
       </ul>
     </ol>
+
+    <img
+    src="https://images.pexels.com/photos/2338407/pexels-photo-2338407.jpeg?cs=srgb&dl=pexels-harry-dona-2338407.jpg&fm=jpg"
+    width="640"
+    height="426"
+    alt="Chicken"
+  />
+
   </body>
 </html>
